DOC: render symbols with LaTeX particle names

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -400,10 +400,10 @@
     "    child1_mass, child2_mass = map(_to_mass_symbol, decay_chain.decay_products)\n",
     "    l_dec = sp.Rational(decay_chain.outgoing_ls.L)\n",
     "    l_prod = sp.Rational(decay_chain.incoming_ls.L)\n",
-    "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.name}}}\")\n",
-    "    spectator_mass = sp.Symbol(f\"m_{{{decay_chain.spectator.name}}}\")\n",
-    "    resonance_mass = sp.Symbol(f\"m_{{{decay_chain.resonance.name}}}\")\n",
-    "    resonance_width = sp.Symbol(Rf\"\\Gamma_{{{decay_chain.resonance.name}}}\")\n",
+    "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.latex}}}\")\n",
+    "    spectator_mass = sp.Symbol(f\"m_{{{decay_chain.spectator.latex}}}\")\n",
+    "    resonance_mass = sp.Symbol(f\"m_{{{decay_chain.resonance.latex}}}\")\n",
+    "    resonance_width = sp.Symbol(Rf\"\\Gamma_{{{decay_chain.resonance.latex}}}\")\n",
     "    R_dec = sp.Symbol(R\"R_\\mathrm{res}\")\n",
     "    R_prod = sp.Symbol(R\"R_{\\Lambda_c}\")\n",
     "    parameter_defaults = {\n",
@@ -452,7 +452,7 @@
     "    state_id = PARTICLE_TO_ID.get(particle)\n",
     "    if state_id is not None:\n",
     "        return sp.Symbol(f\"m{state_id}\", nonnegative=True)\n",
-    "    return sp.Symbol(f\"m_{{{particle.name}}}\", nonnegative=True)"
+    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)"
    ]
   },
   {
