FIX: correctly compute Lambda(2000) width

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -92,7 +92,7 @@
     "    spin=0.5,\n",
     "    parity=-1,\n",
     "    mass=2.0,\n",
-    "    width=(0.020 - 0.400) / 2,\n",
+    "    width=(0.020 + 0.400) / 2,\n",
     ")\n",
     "Λc = PARTICLE_DB[\"Lambda(c)+\"]\n",
     "p = PARTICLE_DB[\"p\"]\n",
