DOC: make intensity rendering cell `full-width`

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -465,7 +465,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
