DOC: add J/ψ → K⁰Σ⁺ example (#8)
* DOC: make intensity rendering cell `full-width`
* DOC: remove Λc⁺ → pπ⁺K⁻ example from main page

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Symbolic Dalitz-Plot Decomposition\n",
+    "# Λc⁺ → pπ⁺K⁻\n",
     "\n",
     "```{autolink-concat}\n",
     "```"
@@ -465,7 +465,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
@@ -487,20 +491,6 @@
    "outputs": [],
    "source": [
     "Latex(aslatex(model.amplitudes))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{toctree}\n",
-    "---\n",
-    "hidden:\n",
-    "maxdepth: 2\n",
-    "---\n",
-    "install\n",
-    "API <api/ampform_dpd>\n",
-    "```"
    ]
   }
  ],
