FEAT: implement `dynamics` lineshapes module

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -31,13 +31,6 @@
     "\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.kinematics.phasespace import Kallen\n",
-    "from ampform.sympy import (\n",
-    "    UnevaluatedExpression,\n",
-    "    create_expression,\n",
-    "    implement_doit_method,\n",
-    "    make_commutative,\n",
-    ")\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
@@ -47,6 +40,7 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
+    "from ampform_dpd.dynamics import BreitWignerMinL\n",
     "from ampform_dpd.io import as_markdown_table, aslatex\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
@@ -256,136 +250,6 @@
    },
    "outputs": [],
    "source": [
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class BreitWignerMinL(UnevaluatedExpression):\n",
-    "    def __new__(\n",
-    "        cls,\n",
-    "        s,\n",
-    "        decaying_mass,\n",
-    "        spectator_mass,\n",
-    "        resonance_mass,\n",
-    "        resonance_width,\n",
-    "        child2_mass,\n",
-    "        child1_mass,\n",
-    "        l_dec,\n",
-    "        l_prod,\n",
-    "        R_dec,\n",
-    "        R_prod,\n",
-    "    ):\n",
-    "        return create_expression(\n",
-    "            cls,\n",
-    "            s,\n",
-    "            decaying_mass,\n",
-    "            spectator_mass,\n",
-    "            resonance_mass,\n",
-    "            resonance_width,\n",
-    "            child2_mass,\n",
-    "            child1_mass,\n",
-    "            l_dec,\n",
-    "            l_prod,\n",
-    "            R_dec,\n",
-    "            R_prod,\n",
-    "        )\n",
-    "\n",
-    "    def evaluate(self):\n",
-    "        s, m_top, m_spec, m0, Γ0, m1, m2, l_dec, l_prod, R_dec, R_prod = self.args\n",
-    "        q = Q(s, m_top, m_spec)\n",
-    "        q0 = Q(m0**2, m_top, m_spec)\n",
-    "        p = P(s, m1, m2)\n",
-    "        p0 = P(m0**2, m1, m2)\n",
-    "        width = EnergyDependentWidth(s, m0, Γ0, m1, m2, l_dec, R_dec)\n",
-    "        return sp.Mul(\n",
-    "            (q / q0) ** l_prod,\n",
-    "            BlattWeisskopf(q * R_prod, l_prod) / BlattWeisskopf(q0 * R_prod, l_prod),\n",
-    "            1 / (m0**2 - s - sp.I * m0 * width),\n",
-    "            (p / p0) ** l_dec,\n",
-    "            BlattWeisskopf(p * R_dec, l_dec) / BlattWeisskopf(p0 * R_dec, l_dec),\n",
-    "            evaluate=False,\n",
-    "        )\n",
-    "\n",
-    "    def _latex(self, printer, *args) -> str:\n",
-    "        s = printer._print(self.args[0])\n",
-    "        return Rf\"\\mathcal{{R}}\\left({s}\\right)\"\n",
-    "\n",
-    "\n",
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class P(UnevaluatedExpression):\n",
-    "    def __new__(cls, s, mi, mj, **hints):\n",
-    "        return create_expression(cls, s, mi, mj, **hints)\n",
-    "\n",
-    "    def evaluate(self):\n",
-    "        s, mi, mj = self.args\n",
-    "        return sp.sqrt(Kallen(s, mi**2, mj**2)) / (2 * sp.sqrt(s))\n",
-    "\n",
-    "    def _latex(self, printer, *args):\n",
-    "        s, mi, mj = map(printer._print, self.args)\n",
-    "        return Rf\"p_{{{mi},{mj}}}\\left({s}\\right)\"\n",
-    "\n",
-    "\n",
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class Q(UnevaluatedExpression):\n",
-    "    def __new__(cls, s, m0, mk, **hints):\n",
-    "        return create_expression(cls, s, m0, mk, **hints)\n",
-    "\n",
-    "    def evaluate(self):\n",
-    "        s, m0, mk = self.args\n",
-    "        return sp.sqrt(Kallen(s, m0**2, mk**2)) / (2 * m0)  # <-- not s!\n",
-    "\n",
-    "    def _latex(self, printer, *args):\n",
-    "        s, m0, mk = map(printer._print, self.args)\n",
-    "        return Rf\"q_{{{m0},{mk}}}\\left({s}\\right)\"\n",
-    "\n",
-    "\n",
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class EnergyDependentWidth(UnevaluatedExpression):\n",
-    "    def __new__(cls, s, m0, Γ0, m1, m2, L, R):\n",
-    "        return create_expression(cls, s, m0, Γ0, m1, m2, L, R)\n",
-    "\n",
-    "    def evaluate(self):\n",
-    "        s, m0, Γ0, m1, m2, L, R = self.args\n",
-    "        p = P(s, m1, m2)\n",
-    "        p0 = P(m0**2, m1, m2)\n",
-    "        ff = BlattWeisskopf(p * R, L) ** 2\n",
-    "        ff0 = BlattWeisskopf(p0 * R, L) ** 2\n",
-    "        return sp.Mul(\n",
-    "            Γ0,\n",
-    "            (p / p0) ** (2 * L + 1),\n",
-    "            m0 / sp.sqrt(s),\n",
-    "            ff / ff0,\n",
-    "            evaluate=False,\n",
-    "        )\n",
-    "\n",
-    "    def _latex(self, printer, *args) -> str:\n",
-    "        s = printer._print(self.args[0])\n",
-    "        return Rf\"\\Gamma\\left({s}\\right)\"\n",
-    "\n",
-    "\n",
-    "@make_commutative\n",
-    "@implement_doit_method\n",
-    "class BlattWeisskopf(UnevaluatedExpression):\n",
-    "    def __new__(cls, z, L, **hints):\n",
-    "        return create_expression(cls, z, L, **hints)\n",
-    "\n",
-    "    def evaluate(self) -> sp.Piecewise:\n",
-    "        z, L = self.args\n",
-    "        cases = {\n",
-    "            0: 1,\n",
-    "            1: 1 / (1 + z**2),\n",
-    "            2: 1 / (9 + 3 * z**2 + z**4),\n",
-    "        }\n",
-    "        return sp.Piecewise(\n",
-    "            *[(sp.sqrt(expr), sp.Eq(L, l_val)) for l_val, expr in cases.items()]\n",
-    "        )\n",
-    "\n",
-    "    def _latex(self, printer, *args):\n",
-    "        z, L = map(printer._print, self.args)\n",
-    "        return Rf\"F_{{{L}}}\\left({z}\\right)\"\n",
-    "\n",
-    "\n",
     "s, m0, Γ0, m1, m2 = sp.symbols(\"s m0 Gamma0 m1 m2\", nonnegative=True)\n",
     "m_top, m_spec = sp.symbols(R\"m_\\mathrm{top} m_\\mathrm{spectator}\")\n",
     "R_dec, R_prod = sp.symbols(R\"R_\\mathrm{res} R_{\\Lambda_c}\")\n",
