DOC: add note about zero amplitudes

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -370,6 +370,15 @@
    "source": [
     "Latex(aslatex(model.amplitudes))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{note}\n",
+    "As opposed to {doc}`/lc2pkpi`, some amplitudes are zero. This is because we do not considered all three subsystems in this example.\n",
+    ":::"
+   ]
   }
  ],
  "metadata": {
