FIX: use same symbol assumptions

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -304,8 +304,8 @@
     "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
     "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
     "    angular_momentum = isobar.interaction.L\n",
-    "    res_mass = sp.Symbol(f\"m_{{{isobar.parent.latex}}}\")\n",
-    "    res_width = sp.Symbol(Rf\"\\Gamma_{{{isobar.parent.latex}}}\")\n",
+    "    res_mass = _create_mass_symbol(isobar.parent)\n",
+    "    res_width = sp.Symbol(Rf\"\\Gamma_{{{isobar.parent.latex}}}\", nonnegative=True)\n",
     "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
     "\n",
     "    mass_dependent_width = EnergyDependentWidth(\n",
