FIX: update parameters after Breit-Wigner

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -270,6 +270,7 @@
     "    decay_ff, new_pars = _create_form_factor(s, decay_node)\n",
     "    parameter_defaults.update(new_pars)\n",
     "    breit_wigner, new_pars = _create_breit_wigner(s, decay_node)\n",
+    "    parameter_defaults.update(new_pars)\n",
     "    return (\n",
     "        production_ff * decay_ff * breit_wigner,\n",
     "        parameter_defaults,\n",
