DOC: create Dalitz plot

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -25,14 +25,19 @@
    "outputs": [],
    "source": [
     "# pyright: reportPrivateUsage=false\n",
+    "# pyright: reportUnusedExpression=false\n",
     "from __future__ import annotations\n",
     "\n",
     "import itertools\n",
+    "import logging\n",
     "from typing import Iterable\n",
     "\n",
+    "import jax.numpy as jnp\n",
+    "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
+    "from ampform.kinematics.phasespace import compute_third_mandelstam\n",
     "from ampform.sympy import (\n",
     "    UnevaluatedExpression,\n",
     "    create_expression,\n",
@@ -40,6 +45,8 @@
     "    make_commutative,\n",
     ")\n",
     "from IPython.display import Latex, Markdown\n",
+    "from matplotlib.colors import LogNorm\n",
+    "from tensorwaves.function.sympy import create_function\n",
     "\n",
     "from ampform_dpd import (\n",
     "    DalitzPlotDecompositionBuilder,\n",
@@ -55,7 +62,8 @@
     "from ampform_dpd.io import as_markdown_table, aslatex\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
-    "simplify_latex_rendering()"
+    "simplify_latex_rendering()\n",
+    "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX"
    ]
   },
   {
@@ -471,6 +479,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The total, aligned intensity expression looks as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -490,12 +505,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where the angles can be computed from initial and final state masses $m_0$, $m_1$, $m_2$, and $m_3$:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Latex(aslatex(model.variables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "masses = {\n",
+    "    _create_mass_symbol(Jpsi): Jpsi.mass,\n",
+    "    _create_mass_symbol(K): K.mass,\n",
+    "    _create_mass_symbol(Σ): Σ.mass,\n",
+    "    _create_mass_symbol(pbar): pbar.mass,\n",
+    "}\n",
+    "model.parameter_defaults.update(masses)\n",
+    "Latex(aslatex(masses))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each **unaligned** amplitude is defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide-input",
-     "full-width"
+     "full-width",
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -507,9 +577,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{note}\n",
-    "As opposed to {doc}`/lc2pkpi`, some amplitudes are zero. This is because we do not considered all three subsystems in this example.\n",
-    ":::"
+    "## Dalitz plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set each helicity coupling to $1$, so that each each parameter value has a definition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_expression = model.full_expression.doit()\n",
+    "couplings = {\n",
+    "    s: 1\n",
+    "    for s in full_expression.free_symbols\n",
+    "    if \"production\" in str(s) or \"decay\" in str(s)\n",
+    "}\n",
+    "model.parameter_defaults.update(couplings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subs_expression = (\n",
+    "    full_expression.xreplace(model.variables)\n",
+    "    .doit()\n",
+    "    .xreplace(model.parameter_defaults)\n",
+    ")\n",
+    "subs_expression.free_symbols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The remaining symbols in the expressions are three Mandelstam variables and initial and final state masses. The masses we know, and one of the Mandelstam variables can be expressed in terms of the others as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
+    "m0, m1, m2, m3 = sorted(masses, key=str)\n",
+    "s1_expr = compute_third_mandelstam(s3, s2, m0, m1, m2, m3)\n",
+    "Latex(aslatex({s1: s1_expr}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this, we have a single expression for the intensity that only depends on Mandelstam (Dalitz) variables $\\sigma_2=m_{13}, \\sigma_3=m_{12}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dalitz_expression = subs_expression.xreplace({s1: s1_expr}).xreplace(masses).doit()\n",
+    "dalitz_expression.free_symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func = create_function(dalitz_expression, backend=\"jax\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "resolution = 500\n",
+    "X, Y = jnp.meshgrid(\n",
+    "    jnp.linspace(1.4, 1.93, num=resolution),\n",
+    "    jnp.linspace(1.65, 2.2, num=resolution),\n",
+    ")\n",
+    "data = {\n",
+    "    \"sigma2\": X**2,\n",
+    "    \"sigma3\": Y**2,\n",
+    "}\n",
+    "intensities = func(data)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 10))\n",
+    "ax.pcolormesh(X, Y, intensities, norm=LogNorm())\n",
+    "ax.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
+    "ax.set_ylabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
+    "plt.show()"
    ]
   }
  ],
