DOC: wrap Breit-Wigner and form factor in class

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -33,6 +33,12 @@
     "import qrules\n",
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
+    "from ampform.sympy import (\n",
+    "    UnevaluatedExpression,\n",
+    "    create_expression,\n",
+    "    implement_doit_method,\n",
+    "    make_commutative,\n",
+    ")\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
     "from ampform_dpd import (\n",
@@ -242,6 +248,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we define symbols for relativistic Breit-Wigner functions and form factors as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "@make_commutative\n",
+    "@implement_doit_method\n",
+    "class RelativisticBreitWigner(UnevaluatedExpression):\n",
+    "    def __new__(cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius):\n",
+    "        return create_expression(\n",
+    "            cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius\n",
+    "        )\n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        s, m0, w0, m1, m2, angular_momentum, meson_radius = self.args\n",
+    "        width = EnergyDependentWidth(\n",
+    "            s=s,\n",
+    "            mass0=m0,\n",
+    "            gamma0=w0,\n",
+    "            m_a=m1,\n",
+    "            m_b=m2,\n",
+    "            angular_momentum=angular_momentum,\n",
+    "            meson_radius=meson_radius,\n",
+    "            name=Rf\"\\Gamma_{{{sp.latex(angular_momentum)}}}\",\n",
+    "        )\n",
+    "        return (m0 * w0) / (m0**2 - s - width * m0 * sp.I)\n",
+    "\n",
+    "    def _latex(self, printer, *args) -> str:\n",
+    "        s, m0, w0, _, _, L, *_ = map(printer._print, self.args)\n",
+    "        return Rf\"\\mathcal{{R}}_{{{L}}}\\left({s}, {m0}, {w0}\\right)\"\n",
+    "\n",
+    "\n",
+    "bw = RelativisticBreitWigner(*sp.symbols(\"s m0 Gamma0 m1 m2 L R\"))\n",
+    "Latex(aslatex({bw: bw.doit(deep=False)}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with $\\Gamma_0(s)$ a {class}`~ampform.dynamics.EnergyDependentWidth`, and"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -250,6 +312,52 @@
     },
     "tags": [
      "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "@make_commutative\n",
+    "@implement_doit_method\n",
+    "class FormFactor(UnevaluatedExpression):\n",
+    "    def __new__(cls, s, m1, m2, angular_momentum, meson_radius):\n",
+    "        return create_expression(cls, s, m1, m2, angular_momentum, meson_radius)\n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        s, m1, m2, angular_momentum, meson_radius = self.args\n",
+    "        return formulate_form_factor(\n",
+    "            s=s,\n",
+    "            m_a=m1,\n",
+    "            m_b=m2,\n",
+    "            angular_momentum=angular_momentum,\n",
+    "            meson_radius=meson_radius,\n",
+    "        )\n",
+    "\n",
+    "    def _latex(self, printer, *args) -> str:\n",
+    "        s, m1, m2, L, *_ = map(printer._print, self.args)\n",
+    "        return Rf\"\\mathcal{{F}}_{{{L}}}\\left({s}, {m1}, {m1}\\right)\"\n",
+    "\n",
+    "\n",
+    "ff = FormFactor(*sp.symbols(\"s m1 m2 L R\"))\n",
+    "Latex(aslatex({ff: ff.doit(deep=False)}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, $B_L^2$ is a {class}`~ampform.dynamics.BlattWeisskopfSquared`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input",
+     "scroll-input"
     ]
    },
    "outputs": [],
@@ -285,10 +393,10 @@
     "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
     "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
     "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
-    "    form_factor = formulate_form_factor(\n",
+    "    form_factor = FormFactor(\n",
     "        s=inv_mass**2,\n",
-    "        m_a=outgoing_state_mass1,\n",
-    "        m_b=outgoing_state_mass2,\n",
+    "        m1=outgoing_state_mass1,\n",
+    "        m2=outgoing_state_mass2,\n",
     "        angular_momentum=isobar.interaction.L,\n",
     "        meson_radius=meson_radius,\n",
     "    )\n",
@@ -309,17 +417,14 @@
     "    res_width = sp.Symbol(Rf\"\\Gamma_{{{isobar.parent.latex}}}\", nonnegative=True)\n",
     "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
     "\n",
-    "    mass_dependent_width = EnergyDependentWidth(\n",
+    "    breit_wigner_expr = RelativisticBreitWigner(\n",
     "        s=s,\n",
     "        mass0=res_mass,\n",
     "        gamma0=res_width,\n",
-    "        m_a=outgoing_state_mass1,\n",
-    "        m_b=outgoing_state_mass2,\n",
+    "        m1=outgoing_state_mass1,\n",
+    "        m2=outgoing_state_mass2,\n",
     "        angular_momentum=angular_momentum,\n",
     "        meson_radius=meson_radius,\n",
-    "    )\n",
-    "    breit_wigner_expr = (res_mass * res_width) / (\n",
-    "        res_mass**2 - s - mass_dependent_width * res_mass * sp.I\n",
     "    )\n",
     "    parameter_defaults = {\n",
     "        res_mass: isobar.parent.mass,\n",
