DOC: implement correct J/ψ → K⁰Σ⁺p̅ lineshapes (#11)
* BEHAVIOR: formulate Breit-Wigner and form factor with AmpForm
* DOC: wrap Breit-Wigner and form factor in class
* DX: ignore pyright future annotation warnings
  It's a bit of a hack... would be better if the VSCode extension
  understands `from __future__ import annotations`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -24,6 +24,7 @@
    },
    "outputs": [],
    "source": [
+    "# pyright: reportPrivateUsage=false\n",
     "from __future__ import annotations\n",
     "\n",
     "import itertools\n",
@@ -31,16 +32,26 @@
     "\n",
     "import qrules\n",
     "import sympy as sp\n",
+    "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
+    "from ampform.sympy import (\n",
+    "    UnevaluatedExpression,\n",
+    "    create_expression,\n",
+    "    implement_doit_method,\n",
+    "    make_commutative,\n",
+    ")\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, simplify_latex_rendering\n",
+    "from ampform_dpd import (\n",
+    "    DalitzPlotDecompositionBuilder,\n",
+    "    _get_particle,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
     "from ampform_dpd.decay import (\n",
     "    IsobarNode,\n",
     "    Particle,\n",
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.dynamics import BreitWignerMinL\n",
     "from ampform_dpd.io import as_markdown_table, aslatex\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
@@ -237,25 +248,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we define symbols for relativistic Breit-Wigner functions and form factors as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     },
-    "tags": [
-     "scroll-input",
-     "hide-input"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "s, m0, Γ0, m1, m2 = sp.symbols(\"s m0 Gamma0 m1 m2\", nonnegative=True)\n",
-    "m_top, m_spec = sp.symbols(R\"m_\\mathrm{top} m_\\mathrm{spectator}\")\n",
-    "R_dec, R_prod = sp.symbols(R\"R_\\mathrm{res} R_{\\Lambda_c}\")\n",
-    "l_Λc, l_R = sp.symbols(R\"l_{\\Lambda_c} l_R\", integer=True, positive=True)\n",
-    "bw = BreitWignerMinL(s, m_top, m_spec, m0, Γ0, m1, m2, l_R, l_Λc, R_dec, R_prod)\n",
+    "@make_commutative\n",
+    "@implement_doit_method\n",
+    "class RelativisticBreitWigner(UnevaluatedExpression):\n",
+    "    def __new__(cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius):\n",
+    "        return create_expression(\n",
+    "            cls, s, mass0, gamma0, m1, m2, angular_momentum, meson_radius\n",
+    "        )\n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        s, m0, w0, m1, m2, angular_momentum, meson_radius = self.args\n",
+    "        width = EnergyDependentWidth(\n",
+    "            s=s,\n",
+    "            mass0=m0,\n",
+    "            gamma0=w0,\n",
+    "            m_a=m1,\n",
+    "            m_b=m2,\n",
+    "            angular_momentum=angular_momentum,\n",
+    "            meson_radius=meson_radius,\n",
+    "            name=Rf\"\\Gamma_{{{sp.latex(angular_momentum)}}}\",\n",
+    "        )\n",
+    "        return (m0 * w0) / (m0**2 - s - width * m0 * sp.I)\n",
+    "\n",
+    "    def _latex(self, printer, *args) -> str:\n",
+    "        s, m0, w0, _, _, L, *_ = map(printer._print, self.args)\n",
+    "        return Rf\"\\mathcal{{R}}_{{{L}}}\\left({s}, {m0}, {w0}\\right)\"\n",
+    "\n",
+    "\n",
+    "bw = RelativisticBreitWigner(*sp.symbols(\"s m0 Gamma0 m1 m2 L R\"))\n",
     "Latex(aslatex({bw: bw.doit(deep=False)}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with $\\Gamma_0(s)$ a {class}`~ampform.dynamics.EnergyDependentWidth`, and"
    ]
   },
   {
@@ -271,50 +316,142 @@
    },
    "outputs": [],
    "source": [
-    "def formulate_breit_wigner(\n",
+    "@make_commutative\n",
+    "@implement_doit_method\n",
+    "class FormFactor(UnevaluatedExpression):\n",
+    "    def __new__(cls, s, m1, m2, angular_momentum, meson_radius):\n",
+    "        return create_expression(cls, s, m1, m2, angular_momentum, meson_radius)\n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        s, m1, m2, angular_momentum, meson_radius = self.args\n",
+    "        return formulate_form_factor(\n",
+    "            s=s,\n",
+    "            m_a=m1,\n",
+    "            m_b=m2,\n",
+    "            angular_momentum=angular_momentum,\n",
+    "            meson_radius=meson_radius,\n",
+    "        )\n",
+    "\n",
+    "    def _latex(self, printer, *args) -> str:\n",
+    "        s, m1, m2, L, *_ = map(printer._print, self.args)\n",
+    "        return Rf\"\\mathcal{{F}}_{{{L}}}\\left({s}, {m1}, {m1}\\right)\"\n",
+    "\n",
+    "\n",
+    "ff = FormFactor(*sp.symbols(\"s m1 m2 L R\"))\n",
+    "Latex(aslatex({ff: ff.doit(deep=False)}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, $B_L^2$ is a {class}`~ampform.dynamics.BlattWeisskopfSquared`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input",
+     "scroll-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def formulate_breit_wigner_with_ff(\n",
     "    decay_chain: ThreeBodyDecayChain,\n",
-    ") -> tuple[BreitWignerMinL, dict[sp.Symbol, float]]:\n",
+    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
+    "    production_node = decay_chain.decay\n",
+    "    assert isinstance(\n",
+    "        production_node.child1, IsobarNode\n",
+    "    ), \"Not a 3-body isobar decay\"\n",
+    "    decay_node = production_node.child1\n",
+    "\n",
     "    s = _get_mandelstam_s(decay_chain)\n",
-    "    child1_mass, child2_mass = map(_to_mass_symbol, decay_chain.decay_products)\n",
-    "    l_dec = sp.Rational(decay_chain.outgoing_ls.L)\n",
-    "    l_prod = sp.Rational(decay_chain.incoming_ls.L)\n",
-    "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.latex}}}\")\n",
-    "    spectator_mass = sp.Symbol(f\"m_{{{decay_chain.spectator.latex}}}\")\n",
-    "    resonance_mass = sp.Symbol(f\"m_{{{decay_chain.resonance.latex}}}\")\n",
-    "    resonance_width = sp.Symbol(Rf\"\\Gamma_{{{decay_chain.resonance.latex}}}\")\n",
-    "    R_dec = sp.Symbol(R\"R_\\mathrm{res}\")\n",
-    "    R_prod = sp.Symbol(R\"R_{\\Lambda_c}\")\n",
-    "    parameter_defaults = {\n",
-    "        parent_mass: decay_chain.parent.mass,\n",
-    "        spectator_mass: decay_chain.spectator.mass,\n",
-    "        resonance_mass: decay_chain.resonance.mass,\n",
-    "        resonance_width: decay_chain.resonance.width,\n",
-    "        child1_mass: decay_chain.decay_products[0].mass,\n",
-    "        child2_mass: decay_chain.decay_products[1].mass,\n",
-    "        # https://github.com/ComPWA/polarimetry/pull/11#issuecomment-1128784376\n",
-    "        R_dec: 1.5,\n",
-    "        R_prod: 5,\n",
-    "    }\n",
-    "    dynamics = BreitWignerMinL(\n",
-    "        s,\n",
-    "        parent_mass,\n",
-    "        spectator_mass,\n",
-    "        resonance_mass,\n",
-    "        resonance_width,\n",
-    "        child1_mass,\n",
-    "        child2_mass,\n",
-    "        l_dec,\n",
-    "        l_prod,\n",
-    "        R_dec,\n",
-    "        R_prod,\n",
+    "    parameter_defaults = {}\n",
+    "    production_ff, new_pars = _create_form_factor(s, production_node)\n",
+    "    parameter_defaults.update(new_pars)\n",
+    "    decay_ff, new_pars = _create_form_factor(s, decay_node)\n",
+    "    parameter_defaults.update(new_pars)\n",
+    "    breit_wigner, new_pars = _create_breit_wigner(s, decay_node)\n",
+    "    parameter_defaults.update(new_pars)\n",
+    "    return (\n",
+    "        production_ff * decay_ff * breit_wigner,\n",
+    "        parameter_defaults,\n",
     "    )\n",
-    "    return dynamics, parameter_defaults\n",
+    "\n",
+    "\n",
+    "def _create_form_factor(\n",
+    "    s: sp.Symbol, isobar: IsobarNode\n",
+    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
+    "    assert isobar.interaction is not None, \"Need LS-couplings\"\n",
+    "    inv_mass = _create_mass_symbol(isobar.parent)\n",
+    "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
+    "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
+    "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
+    "    form_factor = FormFactor(\n",
+    "        s=inv_mass**2,\n",
+    "        m1=outgoing_state_mass1,\n",
+    "        m2=outgoing_state_mass2,\n",
+    "        angular_momentum=isobar.interaction.L,\n",
+    "        meson_radius=meson_radius,\n",
+    "    )\n",
+    "    parameter_defaults = {\n",
+    "        meson_radius: 1,\n",
+    "    }\n",
+    "    return form_factor, parameter_defaults\n",
+    "\n",
+    "\n",
+    "def _create_breit_wigner(\n",
+    "    s: sp.Symbol, isobar: IsobarNode\n",
+    ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
+    "    assert isobar.interaction is not None, \"Need LS-couplings\"\n",
+    "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
+    "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
+    "    angular_momentum = isobar.interaction.L\n",
+    "    res_mass = _create_mass_symbol(isobar.parent)\n",
+    "    res_width = sp.Symbol(Rf\"\\Gamma_{{{isobar.parent.latex}}}\", nonnegative=True)\n",
+    "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
+    "\n",
+    "    breit_wigner_expr = RelativisticBreitWigner(\n",
+    "        s=s,\n",
+    "        mass0=res_mass,\n",
+    "        gamma0=res_width,\n",
+    "        m1=outgoing_state_mass1,\n",
+    "        m2=outgoing_state_mass2,\n",
+    "        angular_momentum=angular_momentum,\n",
+    "        meson_radius=meson_radius,\n",
+    "    )\n",
+    "    parameter_defaults = {\n",
+    "        res_mass: isobar.parent.mass,\n",
+    "        res_width: isobar.parent.width,\n",
+    "        meson_radius: 1,\n",
+    "    }\n",
+    "    return breit_wigner_expr, parameter_defaults\n",
+    "\n",
+    "\n",
+    "def _create_meson_radius_symbol(isobar: IsobarNode) -> sp.Symbol:\n",
+    "    if _get_particle(isobar) is Jpsi:\n",
+    "        return sp.Symbol(R\"R_{J/\\psi}\")\n",
+    "    return sp.Symbol(R\"R_\\mathrm{res}\")\n",
+    "\n",
+    "\n",
+    "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
+    "    particle = _get_particle(particle)\n",
+    "    state_id = PARTICLE_TO_ID.get(particle)\n",
+    "    if state_id is not None:\n",
+    "        return sp.Symbol(f\"m{state_id}\", nonnegative=True)\n",
+    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
     "\n",
     "\n",
     "def _get_mandelstam_s(decay: ThreeBodyDecayChain) -> sp.Symbol:\n",
     "    s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "    m1, m2, m3 = map(_to_mass_symbol, [K, Σ, pbar])\n",
-    "    decay_masses = {_to_mass_symbol(p) for p in decay.decay_products}\n",
+    "    m1, m2, m3 = map(_create_mass_symbol, [K, Σ, pbar])\n",
+    "    decay_masses = {_create_mass_symbol(p) for p in decay.decay_products}\n",
     "    if decay_masses == {m2, m3}:\n",
     "        return s1\n",
     "    if decay_masses == {m1, m3}:\n",
@@ -323,14 +460,7 @@
     "        return s3\n",
     "    raise NotImplementedError(\n",
     "        f\"Cannot find Mandelstam variable for {''.join(decay_masses)}\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _to_mass_symbol(particle: Particle) -> sp.Symbol:\n",
-    "    state_id = PARTICLE_TO_ID.get(particle)\n",
-    "    if state_id is not None:\n",
-    "        return sp.Symbol(f\"m{state_id}\", nonnegative=True)\n",
-    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)"
+    "    )"
    ]
   },
   {
@@ -352,7 +482,9 @@
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
     "for chain in model_builder.decay.chains:\n",
-    "    model_builder.dynamics_choices.register_builder(chain, formulate_breit_wigner)\n",
+    "    model_builder.dynamics_choices.register_builder(\n",
+    "        chain, formulate_breit_wigner_with_ff\n",
+    "    )\n",
     "model = model_builder.formulate(reference_subsystem=1)\n",
     "model.intensity"
    ]
