FEAT: implement `perform_cached_doit()`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -59,10 +59,11 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_doit\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
+    "logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX"
    ]
   },
@@ -593,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_expression = model.full_expression.doit()\n",
+    "full_expression = perform_cached_doit(model.full_expression)\n",
     "couplings = {\n",
     "    s: 1\n",
     "    for s in full_expression.free_symbols\n",
@@ -608,11 +609,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subs_expression = (\n",
+    "subs_expression = perform_cached_doit(\n",
     "    full_expression.xreplace(model.variables)\n",
-    "    .doit()\n",
-    "    .xreplace(model.parameter_defaults)\n",
-    ")\n",
+    ").xreplace(model.parameter_defaults)\n",
     "subs_expression.free_symbols"
    ]
   },
@@ -655,7 +654,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dalitz_expression = subs_expression.xreplace({s1: s1_expr}).xreplace(masses).doit()\n",
+    "dalitz_expression = perform_cached_doit(\n",
+    "    subs_expression.xreplace({s1: s1_expr}).xreplace(masses)\n",
+    ")\n",
     "dalitz_expression.free_symbols"
    ]
   },
