DOC: warn about final state IDs in J/ψ → K⁰Σ⁺p̅ QRules figure

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -80,7 +80,11 @@
    "source": [
     "We follow [this example](https://qrules.readthedocs.io/en/0.9.7/usage.html#investigate-intermediate-resonances), which was generated with QRules, and leave out the $K$-resonances:\n",
     "\n",
-    "![](https://qrules.readthedocs.io/en/0.9.7/_images/usage_9_0.svg)"
+    "![](https://qrules.readthedocs.io/en/0.9.7/_images/usage_9_0.svg)\n",
+    "\n",
+    ":::{warning}\n",
+    "In the above figure, the final states are labeled `0`, `1`, `2`, but in the DPD formalism, the final states are labeled `1`, `2`, `3`.\n",
+    ":::"
    ]
   },
   {
