FIX: hide input cell of form factor

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -274,7 +274,9 @@
     "jupyter": {
      "source_hidden": true
     },
-    "tags": []
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [],
    "source": [
@@ -523,7 +525,9 @@
     "jupyter": {
      "source_hidden": true
     },
-    "tags": []
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [],
    "source": [
