DOC: improve wording around lineshape definitions

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we define symbols for relativistic Breit-Wigner functions and form factors as follows:"
+    "In the following, we define the **relativistic Breit-Wigner function** as:"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "with $\\Gamma_0(s)$ a {class}`~ampform.dynamics.EnergyDependentWidth`, and"
+    "with $\\Gamma_0(s)$ a {class}`~ampform.dynamics.EnergyDependentWidth`, and we define the **form factor** as:"
    ]
   },
   {
